# AIIA-PLABS-Repo

./: .env.example  CHANGELOG.md  CLAUDE.md  pyproject.toml
dashboard/: package.json
local_brain/: __version__.py  config.py  local_api.py
local_brain/autonomy/: __init__.py  gated_downgrade.py  memory_quality.py  proactive_executor.py  self_healing.py
local_brain/command_center/: server.py
local_brain/tests/: test_autonomy.py
