[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiia"
version = "0.4.0"
description = "AIIA — AI Information Architecture. Persistent agent memory + local LLM routing + MCP integration for Claude Code."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Eric Lovold" },
]
maintainers = [
    { name = "Eric Lovold" },
]
keywords = [
    "ai",
    "agent",
    "memory",
    "mcp",
    "claude",
    "ollama",
    "rag",
    "llm",
    "persistent-memory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "aiofiles>=23.0.0,<26.0.0",
    "anthropic>=0.39.0,<1.0.0",
    "google-generativeai>=0.8.0,<1.0.0",
    "tiktoken>=0.5.0,<1.0.0",
    "chromadb>=0.5.0,<1.0.0",
    "supermemory>=3.12.0,<4.0.0",
    "mcp>=0.7.0,<2.0.0",
    "python-dateutil>=2.9.0,<3.0.0",
    "Jinja2>=3.1.0,<4.0.0",
    "langchain-text-splitters>=0.3.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/ericlovo/AIIA"
Repository = "https://github.com/ericlovo/AIIA"
Issues = "https://github.com/ericlovo/AIIA/issues"
Changelog = "https://github.com/ericlovo/AIIA/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["local_brain"]
include-package-data = true

[tool.setuptools.package-data]
local_brain = [
    "command_center/static/*.html",
    "command_center/static/*.css",
    "command_center/static/*.js",
    "story_runner/prompts/*.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # function calls in argument defaults (common in FastAPI)
]

[tool.ruff.lint.per-file-ignores]
"local_brain/tests/*" = ["E501", "F401"]

[tool.pytest.ini_options]
testpaths = ["local_brain/tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
